# ConSite

./: .gitignore  README.md  consite_make_report.py  pyproject.toml
.github/workflows/: publish.yml
examples/: GS2.fasta
foldseek_db/: .gitignore
scripts/: colabfold_batch  get_pfam.sh  quickstart.sh
src/consite/: __init__.py  cli.py  msa_io.py  parse_domtbl.py  viz.py
